--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -7,7 +7,8 @@ icon: fa-comment
 order: 1
 ---
 <header>
-  <h2 class="alt"> Welcome to the <strong>Cryptology and Algorithm</strong> </h2>
+  <h2 class="alt"> Welcome to the <strong>Cryptology and Algorithm</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
+  site template designed by <a href="http://html5up.net/prologue">HTML5 UP</a>. </h2>
   <p>Adapted for Jekyll by <a href=https://chrisbobbe.github.io/>Chris Bobbe</a>. Get started on <a href="https://github.com/chrisbobbe/jekyll-theme-prologue">GitHub!</a></p>
 </header>
 
