--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -1,9 +1,12 @@
 ---
-title: Portfolio
+title: 연구실 소개
 icon: fa-th
 order: 2
 ---
 
+<p> 홈페이지 구축중 </p>
+<!--- 
+     
 <p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
   egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
   Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
@@ -53,3 +56,4 @@ order: 2
       </div>
     </div>
   </div>
+--->
