--- a/_sections/연구실구성원.html
+++ b/_sections/연구실구성원.html
@@ -1,9 +1,11 @@
 ---
-title: Contact
+title: 연구실 구성원
 icon: fa-envelope
 order: 4
 ---
 
+<p> 홈페이지 구축중 </p>
+<!---
 <p>Elementum sem parturient nulla quam placerat viverra
 mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
 donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
@@ -21,3 +23,4 @@ orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
     </div>
   </div>
 </form>
+--->
