--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -7,7 +7,7 @@ icon: fa-comment
 order: 1
 ---
 <header>
-  <h2 class="alt"> Welcome to the <strong>Cryptology and Algorithm</strong> </h2>
+  <h2 class="alt"> Welcome to the <strong>Lab of Cryptology and Algorithm</strong> </h2>
   <p>  We are still editing the homepage. Please contact <U> 6sephiruth@gmail.com </U> for more details.  </p>
   <!--
   <p>Adapted for Jekyll by <a href=https://chrisbobbe.github.io/>Chris Bobbe</a>. Get started on <a href="https://github.com/chrisbobbe/jekyll-theme-prologue">GitHub!</a></p>
