--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -8,7 +8,7 @@ order: 1
 ---
 <header>
   <h2 class="alt"> 2019년 2학기 한양대학교 <strong> 수학 강연회</strong> </h2>
-  <p> 문의사항은 <U> 010-4222-3054 </U> 입니다. </p>
+  <p> 문의사항은 <U> rbalsdl12@hanyang.ac.kr </U> </p>
   <!--
   <p>Adapted for Jekyll by <a href=https://chrisbobbe.github.io/>Chris Bobbe</a>. Get started on <a href="https://github.com/chrisbobbe/jekyll-theme-prologue">GitHub!</a></p>
   -->
