--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -24,3 +24,4 @@ order: 3
 <br>
 ## Dynamic Searchable Symmetric Encryption with Forward Security
  11/8 (금) 10:30 ~ 11:30 (*국가보안기술연구소 김민규 박사)
+<img src="{{ '/_sections/2.jpg'  }}" alt="Ipsum Feugiat" />
