--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -3,7 +3,7 @@ title: 2학기 암호론 세미나
 icon: fa-user
 order: 3
 ---
-
+<body>
 ## 연산검증 기법 소개 : The GKR Protocol
  9/27 (금) 702호 10:30 ~ 11:30 (*수원대학교 김명선교수)
 <br>
@@ -25,3 +25,6 @@ order: 3
 ## Dynamic Searchable Symmetric Encryption with Forward Security
  11/8 (금) 10:30 ~ 11:30 (*국가보안기술연구소 김민규 박사)
 <img src="{{ '/_sections/2.jpg'  }}" alt="Ipsum Feugiat" />
+<img src="/_sections/2.jpg" alt="My Image" width="300" height="300"> 
+</body>
+
