--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -26,6 +26,6 @@ order: 3
  11/8 (금) 10:30 ~ 11:30 (*국가보안기술연구소 김민규 박사)
  <br>
 <img src="{{ '/_sections/2.jpg'  }}" alt="Ipsum Feugiat" />
-<img src="/_sections/2.jpg" alt="My Image" width="300" height="300"> 
+<img src="/2.jpg" width="300" height="300"> 
 </body>
 
