--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -25,6 +25,6 @@ order: 3
 <p> Dynamic Searchable Symmetric Encryption with Forward Security </p>
  11/8 (금) 10:30 ~ 11:30 (*국가보안기술연구소 김민규 박사)
  <br>
-<img src="https://github.com/6sephiruth/6sephiruth.github.io/blob/master/_sections/2.jpg" width="300" height="300"> 
+<img src="https://github.com/6sephiruth/6sephiruth.github.io/blob/master/_sections/2.jpg?raw=true" width="300" height="300"> 
 </body>
 
