Update and rename 학부생을위한.md to 학부생을위한.html

--- a/_sections/학부생을위한.html
+++ b/_sections/학부생을위한.html
@@ -1,7 +1,8 @@
+<body>
 ---
 title: 2학기 수학과 세미나
 icon: fa-check
-order: 2
+order: 3
 ---
 
 # 한양대학교 자연과학관 205호 오후 4:00 - 5:00 #
@@ -28,5 +29,6 @@ order: 2
   The recent rise of deep learning has made impressive changes to academic and industrial research. Even though we have heard of the words "Deep Learning" during the last several years, but it's a bit difficult to imagine how it actually works. In this talk, we will briefly review the basic concepts of machine learning and deep learning, and find out some real-world applications on which deep learning would be effective. And we will look intro recent trends in deep learning, and try to explore what mathematicians can contribute to the development of deep learning research in academia and industry
   
 
-<!--- ![Alt text](/암호포스터.pdf)
---->
+<img src="https://github.com/6sephiruth/6sephiruth.github.io/blob/master/_sections/1.jpg?raw=true" width="800" height="1000"> 
+</body>
+
