--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -4,11 +4,11 @@ icon: fa-user
 order: 2
 ---
 <body>
-<p> 연산검증 기법 소개 : The GKR Protocol </p>
-9/27 (금) 702호 10:30 ~ 11:30 (*수원대학교 김명선교수)
+<p> 연산검증 기법 소개 : The GKR Protocol 
+9/27 (금) 702호 10:30 ~ 11:30 (*수원대학교 김명선교수)</p>
 <br>
-<p> TBA </p>
-10/22 (화) 702호 17:00 ~ 18:00 (*제이마플 이주희 박사)
+<p> TBA 
+10/22 (화) 702호 17:00 ~ 18:00 (*제이마플 이주희 박사)</p>
 <br>
 <p> Threshold ECDSA with Applications to Cryptocurrency Custody </p>
 10/25 (금) 702호 10:30 ~ 11:30 (*Medium 정희원 박사)
