--- a/_sections/학부생을위한.html
+++ b/_sections/학부생을위한.html
@@ -9,23 +9,23 @@ order: 3
 
 <br>
 
-<p> Diffusion and Regularity   * 9/17 (화) <br>
+<p>* 9/17 (화) Diffusion and Regularity<br>
   확산방정식 (Diffusion Equation)에 대해서 소개하고 물리적인 관점에서 이러한 방정식들이 어떠한 형태로 일반화 될 수 있는 가를 논의한다. 그리고 더 나아가서 수학에서는 확산방정식에 관해 어떠한 연구를 진행하는지를 소개한다.</p>
   
   
-<p> 수학, 금융, 그리고 정보기술   * 10/1 (화) <br>
+<p>* 10/1 (화) 수학, 금융, 그리고 정보기술    <br>
   수학 전공자가 금융과 정보기술 분야에서 어떤 활동을 하고 어떤 장점을 가질 수 있는지에 대해 강연자의 경험을 공유한다.
   
   
-<p> 데이터 싸이언티스트에 대하여   * 10/15 (화) <br>
+<p>* 10/15 (화) 데이터 싸이언티스트에 대하여    <br>
   Glassdoor의 조사에 따르면, 데이터 사이언티스트는 미국 최고의 10개 작업중 1위를 차지할 만큼, 관심과 선호를 받고 있다. 한국에서도 빅데이터, AI, 데이터 싸이언스 등이 많은 사람들로 부터 관심을 받고 있는데, 데이터 사이언티스트 들은 어떤 일을 하는지, 데이터 사이언티스트가 되려면 어떤 준비를 해야하는지를 알아본다.</p>
   
   
-<p> Chromatic Symmetric functions   * 10/29 (화) <br>
+<p>* 10/29 (화) Chromatic Symmetric functions    <br>
   '색 대칭함수'는 그래프를 채색하는 방법들로부터 자연스럽게 정의되는 대칭함수이다. 이들 대칭함수를 대상으로 하는 Stanley-Steabridge conjecture를 조합적, 대수적 그리고 기하학의 관점에서 이해하는 방법을 소개한다. 이를 통하여 서로 다른 분야의 수학이 색대칭함수를 중심으로 조화롭게 연결됨을 확인할 수 있을 것이다.</p>
   
  
-<p> Deep Learning Research in Industry   * 11/5 (화) <br>
+<p>* 11/5 (화) Deep Learning Research in Industry    <br>
   The recent rise of deep learning has made impressive changes to academic and industrial research. Even though we have heard of the words "Deep Learning" during the last several years, but it's a bit difficult to imagine how it actually works. In this talk, we will briefly review the basic concepts of machine learning and deep learning, and find out some real-world applications on which deep learning would be effective. And we will look intro recent trends in deep learning, and try to explore what mathematicians can contribute to the development of deep learning research in academia and industry</p>
   
 
