--- a/_sections/학부생을위한.html
+++ b/_sections/학부생을위한.html
@@ -8,6 +8,18 @@ order: 3
 <p> 한양대학교 자연과학관 205호 오후 4:00 - 5:00 </p>
 
 <br>
+<p> Diffusion and Regularity <br>
+9/17 (화) 205호 4:00 ~ 5:00 (*고려대학교 김일두 교수)</p>
+<p> 수학, 금융, 그리고 정보기술 <br>
+10/1 (화) 205호 4:00 ~ 5:00 (*Atomrigs 배경일 매니징파트너)</p>
+<p> 데이터 싸이언티스트에 대하여 <br>
+10/15 (화) 205호 4:00 ~ 5:00 (*중앙대학교 곽일엽 교수)</p>
+<p> Chromatic Symmetric functions <br>
+10/29 (화) 205호 4:00 ~ 5:00 (*아주대학교 조수진 교수)</p>
+<p> Deep Learning Research in Industry <br>
+11/5 (화) 205호 4:00 ~ 5:00 (*삼성전자 현윤석 박사)</p>
+
+  
 <!---
 <p>* 9/17 (화) Diffusion and Regularity<br>
   확산방정식 (Diffusion Equation)에 대해서 소개하고 물리적인 관점에서 이러한 방정식들이 어떠한 형태로 일반화 될 수 있는 가를 논의한다. 그리고 더 나아가서 수학에서는 확산방정식에 관해 어떠한 연구를 진행하는지를 소개한다.</p>
