--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -3,6 +3,8 @@ title: 2학기 암호론 세미나
 icon: fa-user
 order: 2
 ---
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
 <p> 연산검증 기법 소개 : The GKR Protocol <br>
 9/27 (금) 702호 10:30 ~ 11:30 (*수원대학교 김명선교수)</p>
