--- a/_sections/학부생을위한.html
+++ b/_sections/학부생을위한.html
@@ -3,6 +3,8 @@ title: 2학기 수학과 세미나
 icon: fa-check
 order: 3
 ---
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
 
 <p> 한양대학교 자연과학관 205호 오후 4:00 - 5:00 </p>
