--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -28,6 +28,6 @@ order: 2
 <p> Dynamic Searchable Symmetric Encryption with Forward Security <br>
 11/8 (금) 10:30 ~ 11:30 (*국가보안기술연구소 김민규 박사)</p>
 
-<img src="https://github.com/6sephiruth/6sephiruth.github.io/blob/master/_sections/2.jpg?raw=true" width="800" height="1000"> 
+<img src="https://github.com/6sephiruth/6sephiruth.github.io/blob/master/_sections/2.jpg?raw=true" style="max-width: 100%; height: auto;"> 
 </body>
 
