--- a/_sections/학부생을위한.html
+++ b/_sections/학부생을위한.html
@@ -11,15 +11,15 @@ order: 3
 
 <br>
 <p> Diffusion and Regularity <br>
-9/17 (화) 205호 4:00 ~ 5:00 (*고려대학교 김일두 교수)</p>
+9/17 (화) 205호 4:00 ~ 5:00<br>(*고려대학교 김일두 교수)</p>
 <p> 수학, 금융, 그리고 정보기술 <br>
-10/1 (화) 205호 4:00 ~ 5:00 (*Atomrigs 배경일 매니징파트너)</p>
+10/1 (화) 205호 4:00 ~ 5:00<br>(*Atomrigs 배경일 매니징파트너)</p>
 <p> 데이터 싸이언티스트에 대하여 <br>
-10/15 (화) 205호 4:00 ~ 5:00 (*중앙대학교 곽일엽 교수)</p>
+10/15 (화) 205호 4:00 ~ 5:00<br>(*중앙대학교 곽일엽 교수)</p>
 <p> Chromatic Symmetric functions <br>
-10/29 (화) 205호 4:00 ~ 5:00 (*아주대학교 조수진 교수)</p>
+10/29 (화) 205호 4:00 ~ 5:00<br>(*아주대학교 조수진 교수)</p>
 <p> Deep Learning Research in Industry <br>
-11/5 (화) 205호 4:00 ~ 5:00 (*삼성전자 현윤석 박사)</p>
+11/5 (화) 205호 4:00 ~ 5:00<br>(*삼성전자 현윤석 박사)</p>
 
   
 <!---
