--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -8,25 +8,25 @@ order: 2
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <p> 연산검증 기법 소개 : The GKR Protocol <br>
-9/27 (금) 702호 10:30 ~ 11:30 (*수원대학교 김명선교수)</p>
+9/27 (금) 702호 10:30 ~ 11:30<br>(*수원대학교 김명선교수)</p>
 
 <p> TBA <br>
-10/22 (화) 702호 17:00 ~ 18:00 (*제이마플 이주희 박사)</p>
+10/22 (화) 702호 17:00 ~ 18:00<br>(*제이마플 이주희 박사)</p>
 
 <p> Threshold ECDSA with Applications to Cryptocurrency Custody <br>
-10/25 (금) 702호 10:30 ~ 11:30 (*Medium 정희원 박사) </p>
+10/25 (금) 702호 10:30 ~ 11:30<br>(*Medium 정희원 박사) </p>
 
 <p> Federated Learning & Privacy <br>
-10/25 (금) B116호 13:30 ~ 14:30 (*삼성 리서치 김성욱 박사) </p>
+10/25 (금) B116호 13:30 ~ 14:30<br>(*삼성 리서치 김성욱 박사) </p>
 
 <p> Privacy Preserving CNN Prediction <br>
-10/25 (금) B116호 14:30 ~ 15:30 (*삼성 리서치 김진수 박사)</p>
+10/25 (금) B116호 14:30 ~ 15:30<br>(*삼성 리서치 김진수 박사)</p>
 
 <p> TBA <br>
-10/29 (화) 117호 13:00 ~ 14:00 (*중앙대학교 응용통계학과 곽일엽 교수)</p>
+10/29 (화) 117호 13:00 ~ 14:00<br>(*중앙대학교 응용통계학과 곽일엽 교수)</p>
 
 <p> Dynamic Searchable Symmetric Encryption with Forward Security <br>
-11/8 (금) 10:30 ~ 11:30 (*국가보안기술연구소 김민규 박사)</p>
+11/8 (금) 10:30 ~ 11:30<br>(*국가보안기술연구소 김민규 박사)</p>
 
 <img src="https://github.com/6sephiruth/6sephiruth.github.io/blob/master/_sections/2.jpg?raw=true" style="max-width: 100%; height: auto;"> 
 </body>
