--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -7,7 +7,8 @@ icon: fa-comment
 order: 1
 ---
 <header>
-  <h2 class="alt"> 2019년 2학기 한양대학교<br><strong>수학 강연회</strong> </h2>
+  <h2 class="alt"> 2019년 2학기 한양대학교</h2><br>
+  <strong>수학 강연회</strong>
   <p> 문의사항은 <U> rbalsdl12@hanyang.ac.kr </U> </p>
   <!--
   <p>Adapted for Jekyll by <a href=https://chrisbobbe.github.io/>Chris Bobbe</a>. Get started on <a href="https://github.com/chrisbobbe/jekyll-theme-prologue">GitHub!</a></p>
