--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -3,7 +3,16 @@ title: 2학기 암호론 세미나
 icon: fa-user
 order: 2
 ---
+<meta charset="utf-8">
+<style>
 
+p{
+
+ font-size:5vw;
+
+}
+
+</style>
 <body>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
