--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -1,5 +1,5 @@
 ---
-title: Intro
+title: Intro<a href="xxx">Label</a>
 cover-photo: assets/images/banner.jpg
 cover-photo-alt: example cover photo
 auto-header: none
@@ -8,7 +8,7 @@ order: 1
 ---
 <header>
   <h2 class="alt"> <strong> 2019년 2학기 암호론 세미나 </strong> </h2><br>
-  
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSd8vHZlGjj2MQybPwP3D1vx56BpVZfpfBeprS-lM2FoJ_P1zQ/viewform?usp=sf_link">참석 링크</a>
   <p> 문의사항은 <U> rbalsdl12@hanyang.ac.kr </U> </p>
   <!--
   <p>Adapted for Jekyll by <a href=https://chrisbobbe.github.io/>Chris Bobbe</a>. Get started on <a href="https://github.com/chrisbobbe/jekyll-theme-prologue">GitHub!</a></p>
