--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -8,7 +8,7 @@ order: 1
 ---
 <header>
   <h2 class="alt"> <strong> 2019년 2학기 암호론 세미나 </strong> </h2><br>
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLSd8vHZlGjj2MQybPwP3D1vx56BpVZfpfBeprS-lM2FoJ_P1zQ/viewform?usp=sf_link">참석 링크</a>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSd8vHZlGjj2MQybPwP3D1vx56BpVZfpfBeprS-lM2FoJ_P1zQ/viewform?usp=sf_link">참석을 원하시면 다음 링크를 클릭하여 주십시오.</a>
   <p> 문의사항은 <U> rbalsdl12@hanyang.ac.kr </U> </p>
   <!--
   <p>Adapted for Jekyll by <a href=https://chrisbobbe.github.io/>Chris Bobbe</a>. Get started on <a href="https://github.com/chrisbobbe/jekyll-theme-prologue">GitHub!</a></p>
