--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -8,7 +8,14 @@ order: 2
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <p> 연산검증 기법 소개 : The GKR Protocol <br>
-9/27 (금) 702호 10:30 ~ 11:30<br>(*수원대학교 김명선교수)</p>
+9/27 (금) 702호 10:30 ~ 11:30<br>(*수원대학교 김명선교수)</p><br>
+
+<a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
+초록 보기
+</a><div style="DISPLAY: none">
+테스트
+</div>
+  
 
 <p> TBA <br>
 10/22 (화) 702호 17:00 ~ 18:00<br>(*제이마플 이주희 박사)</p>
