--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -12,7 +12,9 @@ order: 2
 <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
 초록 보기
 </a><div style="DISPLAY: none">
-테스트
+암호 이론/응용분야에서 큰 주목을 받는 주제의 하나가, 연산 검증 (Verifiable Computation)이다.<br>
+그래서 연산검증 기법의 동기 및 기본적인 설계 원리와 함께, 
+    2008년 STOC에 처음으로 제안된 GKR 기법을 위주로 연산검증 기법의 실제 설계 사례를 살펴본다.
 </div>
   
 
