--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -8,7 +8,7 @@ order: 2
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <p> 연산검증 기법 소개 : The GKR Protocol <br>
-9/27 (금) 702호 10:30 ~ 11:30<br>(*수원대학교 김명선교수)
+9/27 (금) 702호 10:30 ~ 11:30<br>(*수원대학교 김명선교수)</p>
 <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
 초록 보기
 </a><div style="DISPLAY: none">
@@ -16,7 +16,7 @@ order: 2
 그래서 연산검증 기법의 동기 및 기본적인 설계 원리와 함께, 
     2008년 STOC에 처음으로 제안된 GKR 기법을 위주로 연산검증 기법의 실제 설계 사례를 살펴본다.
 </div>
-</p>  
+
 
 <p> TBA <br>
 10/22 (화) 702호 17:00 ~ 18:00<br>(*제이마플 이주희 박사)</p>
