--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -12,7 +12,7 @@ order: 2
 <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
 초록 보기
 </a><div style="DISPLAY: none">
-암호 이론/응용분야에서 큰 주목을 받는 주제의 하나가, 연산 검증 (Verifiable Computation)이다.<br>
+암호 이론/응용분야에서 큰 주목을 받는 주제의 하나가, 연산 검증 (Verifiable Computation)이다.
 그래서 연산검증 기법의 동기 및 기본적인 설계 원리와 함께, 
     2008년 STOC에 처음으로 제안된 GKR 기법을 위주로 연산검증 기법의 실제 설계 사례를 살펴본다.
 </div>
@@ -20,6 +20,7 @@ order: 2
 
 <p> TBA <br>
 10/22 (화) 702호 17:00 ~ 18:00<br>(*제이마플 이주희 박사)</p>
+
 
 <p> Threshold ECDSA with Applications to Cryptocurrency Custody <br>
 10/25 (금) 702호 10:30 ~ 11:30<br>(*Medium 정희원 박사) </p>
@@ -35,6 +36,17 @@ order: 2
 
 <p> Dynamic Searchable Symmetric Encryption with Forward Security <br>
 11/8 (금) 10:30 ~ 11:30<br>(*국가보안기술연구소 김민규 박사)</p>
+<a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
+초록 보기
+</a><div style="DISPLAY: none">
+Searchable symmetric encryption (SSE) enables a client to perform efficient and practical keyword searches
+on the encrypted documents while preserving the privacy. There are many things to consider 
+when designing secure and efficient SSE schemes. In particular, file-injection type attacks highlighted 
+the importance of forward security in dynamic SSE. 
+In this talk, we look at representative design approaches for SSE, and explain our solution 
+for designing forward secure dynamic SSE schemes with optimal search and update complexity. 
+</div>
+
 
 <img src="https://github.com/6sephiruth/6sephiruth.github.io/blob/master/_sections/2.jpg?raw=true" style="max-width: 100%; height: auto;"> 
 </body>
