--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -47,6 +47,15 @@ In this talk, we look at representative design approaches for SSE, and explain o
 for designing forward secure dynamic SSE schemes with optimal search and update complexity. 
 </div>
 
+<p> Development and Applications of Homomorphic Encryption <br>
+12/9 (월) 16:00 ~ <br>(*김미란 교수)</p>
+<a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
+초록 보기
+</a><div style="DISPLAY: none">
+Homomorphic encryption is an encryption method to allow arbitrary computation on encrypted data without decryption. In this talk, we will introduce recent development and progress on homomorphic encryption. Further we summarize the state-of-art benchmarks of the encryption systems in real-world applications such as genomic analysis and machine learning.
+
+</div>
+
 
 <img src="https://github.com/6sephiruth/6sephiruth.github.io/blob/master/_sections/2.jpg?raw=true" style="max-width: 100%; height: auto;"> 
 </body>
