--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -8,15 +8,15 @@ order: 2
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <p> 연산검증 기법 소개 : The GKR Protocol <br>
-9/27 (금) 702호 10:30 ~ 11:30<br>(*수원대학교 김명선교수)
+9/27 (금) 702호 10:30 ~ 11:30<br>(*수원대학교 김명선교수)</p>
 <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
 초록 보기
-</a><div style="DISPLAY: none"></p>
+</a><div style="DISPLAY: none">
 암호 이론/응용분야에서 큰 주목을 받는 주제의 하나가, 연산 검증 (Verifiable Computation)이다.
 그래서 연산검증 기법의 동기 및 기본적인 설계 원리와 함께, 
     2008년 STOC에 처음으로 제안된 GKR 기법을 위주로 연산검증 기법의 실제 설계 사례를 살펴본다.
 </div>
-
+<br>
 
 <p> TBA <br>
 10/22 (화) 702호 17:00 ~ 18:00<br>(*제이마플 이주희 박사)</p>
@@ -46,7 +46,7 @@ the importance of forward security in dynamic SSE.
 In this talk, we look at representative design approaches for SSE, and explain our solution 
 for designing forward secure dynamic SSE schemes with optimal search and update complexity. 
 </div>
-
+<br>
 <p> Development and Applications of Homomorphic Encryption <br>
 12/9 (월) 16:00 ~ <br>(*김미란 교수)</p>
 <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
