--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -38,7 +38,7 @@ order: 2
 11/8 (금) 10:30 ~ 11:30<br>(*국가보안기술연구소 김민규 박사)</p>
 <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
 초록 보기
-</a><div style="DISPLAY: none">
+</a><div style=style="text-align:left">
 Searchable symmetric encryption (SSE) enables a client to perform efficient and practical keyword searches
 on the encrypted documents while preserving the privacy. There are many things to consider 
 when designing secure and efficient SSE schemes. In particular, file-injection type attacks highlighted 
@@ -47,11 +47,13 @@ In this talk, we look at representative design approaches for SSE, and explain o
 for designing forward secure dynamic SSE schemes with optimal search and update complexity. 
 </div>
 <br>
+    
+    
 <p> Development and Applications of Homomorphic Encryption <br>
 12/9 (월) 16:00 ~ <br>(*김미란 교수)</p>
 <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
 초록 보기
-</a><div style="DISPLAY: none">
+</a><div style=style="text-align:left">
 Homomorphic encryption is an encryption method to allow arbitrary computation on encrypted data without decryption. In this talk, we will introduce recent development and progress on homomorphic encryption. Further we summarize the state-of-art benchmarks of the encryption systems in real-world applications such as genomic analysis and machine learning.
 
 </div>
