--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -28,6 +28,14 @@ order: 2
 <p> Federated Learning & Privacy <br>
 10/25 (금) B116호 13:30 ~ 14:30<br>(*삼성 리서치 김성욱 박사) </p>
 
+<a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
+초록 보기
+</a><div style=style="text-align:left">
+Federated Learning is an emerging approach for machine learning. It enables local devices (e.g. mobile phones) to collaboratively learn a shared model using the training data on the device and keeping the data on device. Since no raw data is collected during training, it is considered as a promising privacy-friendly framework. However, recent works show that a naive federated leaning still might leak some information about users' data. In this talk, recent efforts to enhance privacy protection during federated learning will be briefly presented.
+</div>
+
+    
+    
 <p> Privacy Preserving CNN Prediction <br>
 10/25 (금) B116호 14:30 ~ 15:30<br>(*삼성 리서치 김진수 박사)</p>
 
