--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -17,7 +17,7 @@ order: 2
     2008년 STOC에 처음으로 제안된 GKR 기법을 위주로 연산검증 기법의 실제 설계 사례를 살펴본다.
 </div>
 <br>
-
+<br>
 <p> TBA <br>
 10/22 (화) 702호 17:00 ~ 18:00<br>(*제이마플 이주희 박사)</p>
 
@@ -30,7 +30,7 @@ order: 2
 
 <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
 초록 보기
-</a><div style=style="text-align:left">
+</a><div style=style="DISPLAY: none; text-align:left">
 Federated Learning is an emerging approach for machine learning. It enables local devices (e.g. mobile phones) to collaboratively learn a shared model using the training data on the device and keeping the data on device. Since no raw data is collected during training, it is considered as a promising privacy-friendly framework. However, recent works show that a naive federated leaning still might leak some information about users' data. In this talk, recent efforts to enhance privacy protection during federated learning will be briefly presented.
 </div>
 
@@ -46,7 +46,7 @@ Federated Learning is an emerging approach for machine learning. It enables loca
 11/8 (금) 10:30 ~ 11:30<br>(*국가보안기술연구소 김민규 박사)</p>
 <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
 초록 보기
-</a><div style=style="text-align:left">
+</a><div style=style="DISPLAY: none; text-align:left">
 Searchable symmetric encryption (SSE) enables a client to perform efficient and practical keyword searches
 on the encrypted documents while preserving the privacy. There are many things to consider 
 when designing secure and efficient SSE schemes. In particular, file-injection type attacks highlighted 
@@ -61,7 +61,7 @@ for designing forward secure dynamic SSE schemes with optimal search and update 
 12/9 (월) 16:00 ~ <br>(*김미란 교수)</p>
 <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
 초록 보기
-</a><div style=style="text-align:left">
+</a><div style=style="DISPLAY: none; text-align:left">
 Homomorphic encryption is an encryption method to allow arbitrary computation on encrypted data without decryption. In this talk, we will introduce recent development and progress on homomorphic encryption. Further we summarize the state-of-art benchmarks of the encryption systems in real-world applications such as genomic analysis and machine learning.
 
 </div>
