--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -25,8 +25,8 @@ order: 2
 <p> Threshold ECDSA with Applications to Cryptocurrency Custody <br>
 10/25 (금) 702호 10:30 ~ 11:30<br>(*Medium 정희원 박사) </p>
 
-<p> Federated Learning & Privacy <br>
-10/25 (금) B116호 13:30 ~ 14:30<br>(*삼성 리서치 김성욱 박사) </p>
+Federated Learning & Privacy <br>
+10/25 (금) B116호 13:30 ~ 14:30<br>(*삼성 리서치 김성욱 박사)<br>
 
 <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
 초록 보기
@@ -42,8 +42,8 @@ Federated Learning is an emerging approach for machine learning. It enables loca
 <p> TBA <br>
 10/29 (화) 117호 13:00 ~ 14:00<br>(*중앙대학교 응용통계학과 곽일엽 교수)</p>
 
-<p> Dynamic Searchable Symmetric Encryption with Forward Security <br>
-11/8 (금) 10:30 ~ 11:30<br>(*국가보안기술연구소 김민규 박사)</p>
+Dynamic Searchable Symmetric Encryption with Forward Security <br>
+11/8 (금) 10:30 ~ 11:30<br>(*국가보안기술연구소 김민규 박사)<br>
 <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
 초록 보기
 </a><div style=style="DISPLAY: none; text-align:left">
