--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -27,10 +27,9 @@ order: 2
 
 Federated Learning & Privacy <br>
 10/25 (금) B116호 13:30 ~ 14:30<br>(*삼성 리서치 김성욱 박사)<br>
-
 <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
 초록 보기
-</a><div style=style="DISPLAY: none; text-align:left">
+</a><div style="DISPLAY: none; text-align:left">
 Federated Learning is an emerging approach for machine learning. It enables local devices (e.g. mobile phones) to collaboratively learn a shared model using the training data on the device and keeping the data on device. Since no raw data is collected during training, it is considered as a promising privacy-friendly framework. However, recent works show that a naive federated leaning still might leak some information about users' data. In this talk, recent efforts to enhance privacy protection during federated learning will be briefly presented.
 </div>
 
@@ -46,7 +45,7 @@ Dynamic Searchable Symmetric Encryption with Forward Security <br>
 11/8 (금) 10:30 ~ 11:30<br>(*국가보안기술연구소 김민규 박사)<br>
 <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
 초록 보기
-</a><div style=style="DISPLAY: none; text-align:left">
+</a><div style="DISPLAY: none; text-align:left">
 Searchable symmetric encryption (SSE) enables a client to perform efficient and practical keyword searches
 on the encrypted documents while preserving the privacy. There are many things to consider 
 when designing secure and efficient SSE schemes. In particular, file-injection type attacks highlighted 
@@ -61,7 +60,7 @@ for designing forward secure dynamic SSE schemes with optimal search and update 
 12/9 (월) 16:00 ~ <br>(*김미란 교수)</p>
 <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
 초록 보기
-</a><div style=style="DISPLAY: none; text-align:left">
+</a><div style="DISPLAY: none; text-align:left">
 Homomorphic encryption is an encryption method to allow arbitrary computation on encrypted data without decryption. In this talk, we will introduce recent development and progress on homomorphic encryption. Further we summarize the state-of-art benchmarks of the encryption systems in real-world applications such as genomic analysis and machine learning.
 
 </div>
