--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -56,8 +56,8 @@ for designing forward secure dynamic SSE schemes with optimal search and update 
 <br>
     
     
-<p> Development and Applications of Homomorphic Encryption <br>
-12/9 (월) 16:00 ~ <br>(*김미란 교수)</p>
+Development and Applications of Homomorphic Encryption <br>
+12/9 (월) 16:00 ~ <br>(*김미란 교수)<br>
 <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
 초록 보기
 </a><div style="DISPLAY: none; text-align:left">
