--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -12,7 +12,7 @@ order: 2
 9/27 (금) 702호 10:30 ~ 11:30<br>(*수원대학교 김명선교수)<br>
 <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
 초록 보기
-</a><div style="DISPLAY: none; text-align:left">
+</a><div style="DISPLAY: none; color:red; text-align:left">
 암호 이론/응용분야에서 큰 주목을 받는 주제의 하나가, 연산 검증 (Verifiable Computation)이다.
 그래서 연산검증 기법의 동기 및 기본적인 설계 원리와 함께, 
     2008년 STOC에 처음으로 제안된 GKR 기법을 위주로 연산검증 기법의 실제 설계 사례를 살펴본다.
@@ -33,7 +33,7 @@ Federated Learning & Privacy <br>
 10/25 (금) B116호 13:30 ~ 14:30<br>(*삼성 리서치 김성욱 박사)<br>
 <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
 초록 보기
-</a><div style="DISPLAY: none; text-align:left">
+</a><div style="DISPLAY: none; color:red; text-align:left">
 Federated Learning is an emerging approach for machine learning. It enables local devices (e.g. mobile phones) to collaboratively learn a shared model using the training data on the device and keeping the data on device. Since no raw data is collected during training, it is considered as a promising privacy-friendly framework. However, recent works show that a naive federated leaning still might leak some information about users' data. In this talk, recent efforts to enhance privacy protection during federated learning will be briefly presented.
 </div>
 <br>
@@ -54,7 +54,7 @@ Dynamic Searchable Symmetric Encryption with Forward Security <br>
 11/8 (금) 10:30 ~ 11:30<br>(*국가보안기술연구소 김민규 박사)<br>
 <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
 초록 보기
-</a><div style="DISPLAY: none; text-align:left">
+</a><div style="DISPLAY: none; color:red; text-align:left">
 Searchable symmetric encryption (SSE) enables a client to perform efficient and practical keyword searches
 on the encrypted documents while preserving the privacy. There are many things to consider 
 when designing secure and efficient SSE schemes. In particular, file-injection type attacks highlighted 
@@ -70,7 +70,7 @@ Development and Applications of Homomorphic Encryption <br>
 12/9 (월) 16:00 ~ <br>(*김미란 교수)<br>
 <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)">
 초록 보기
-</a><div style="DISPLAY: none; text-align:left">
+</a><div style="DISPLAY: none; color:red; text-align:left">
 Homomorphic encryption is an encryption method to allow arbitrary computation on encrypted data without decryption. In this talk, we will introduce recent development and progress on homomorphic encryption. Further we summarize the state-of-art benchmarks of the encryption systems in real-world applications such as genomic analysis and machine learning.
 </div>
 <br>
