--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -10,7 +10,7 @@ order: 2
     
 연산검증 기법 소개 : The GKR Protocol <br>
 9/27 (금) 702호 10:30 ~ 11:30<br>(*수원대학교 김명선교수)<br>
-<a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'red':'none';" href="javascript:void(0)">
+<a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)" style= "color:red;">
 초록 보기
 </a><div style="DISPLAY: none;  text-align:left">
 암호 이론/응용분야에서 큰 주목을 받는 주제의 하나가, 연산 검증 (Verifiable Computation)이다.
