--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -25,7 +25,8 @@ order: 2
     <del>10/22 (화) 702호 17:00 ~ 18:00</del><br><del>(*이주희 박사, 제이마플)</del>
     <br><br>
 
-
+TBA<br>
+    10//22 (화) 702호 13:00 ~ 14:00 <br>(*김지혜 교수, 국민대학교)<br><br>
     
 Threshold ECDSA with Applications to Cryptocurrency Custody <br>
 10/25 (금) 702호 10:30 ~ 11:30<br>(*정희원 박사 Medium)<br>
