--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -29,7 +29,7 @@ TBA<br>
  10/24 (목) 746호 15:00 ~ 16:00 <br>(한규형 박사, coinplug)<br><br>
     
 Threshold ECDSA with Applications to Cryptocurrency Custody <br>
-10/25 (금) 702호 10:30 ~ 11:30<br>(*정희원 박사 Medium)<br>
+10/25 (금) 702호 10:30 ~ 11:30<br>(정희원 박사 Medium)<br>
 <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)" style="color:red;">
 초록 보기
 </a><div style="DISPLAY: none;  text-align:left">
