--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -25,8 +25,18 @@ order: 2
     <del>10/22 (화) 702호 17:00 ~ 18:00</del><br><del>(이주희 박사, 제이마플)</del>
     <br><br>
 
-TBA<br>
- 10/24 (목) 746호 15:00 ~ 16:00 <br>(한규형 박사, coinplug)<br><br>
+ZKP and its applications in block chain<br>
+ 10/24 (목) 746호 15:00 ~ 16:00 <br>(한규형 박사, coinplug)<br>
+    <a onclick="this.nextSibling.style.display=(this.nextSibling.style.display=='none')?'block':'none';" href="javascript:void(0)" style="color:red;">
+초록 보기
+</a><div style="DISPLAY: none;  text-align:left">
+최근에 정보의 무결성을 보장하면서 탈중앙화를 가능하게 하는 블록체인 기술과 비밀정보를 알려주지 않으면서 해당 정보를 알고 있다는 사실을
+    증명하는 영지식 증명 기술의 융햡이 많이 이루어지고 있다. 해당 발표에서는 영지식 증명과 블록체인에 대한 간략한 소개와 두 기술의
+    조합으로 만들어진 Zcash, Hyperledgerlndy와 같은 기술에 대한 소개를 한다.
+</div>
+<br>
+<br>
+
     
 Threshold ECDSA with Applications to Cryptocurrency Custody <br>
 10/25 (금) 702호 10:30 ~ 11:30<br>(정희원 박사 Medium)<br>
