--- a/_sections/암호론.html
+++ b/_sections/암호론.html
@@ -8,7 +8,7 @@ order: 2
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <a class="btn" href="https://github.com/CryptoSeminar/CryptoSeminar.github.io/blob/master/_sections/class_file/ThresholdECDSA.pdf" download>PDF 다운로드</a>
-
+<a class="btn" href="../class_file/ThresholdECDSA.pdf" download>PDF 다운로드</a>
     
     연산검증 기법 소개 : The GKR Protocol <br>
 9/27 (금) 702호 10:30 ~ 11:30<br>(김명선교수, 수원대학교)<br>
