--- a/_sections/암호및정보보호론.html
+++ b/_sections/암호및정보보호론.html
@@ -8,15 +8,15 @@ order: 4
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 주찬양 발표 자료
-<br><a class="btn" style="color:red href="https://github.com/CryptoSeminar/CryptoSeminar.github.io/blob/master/_sections/class_file/주찬양.pdf" download>PDF 다운로드</a><br>
+<br><a class="btn" href="https://github.com/CryptoSeminar/CryptoSeminar.github.io/blob/master/_sections/class_file/주찬양.pdf" download>PDF 다운로드</a><br>
 <br>
 
 고한경 발표 자료
-<br><a class="btn" style="color:red; href="https://github.com/CryptoSeminar/CryptoSeminar.github.io/blob/master/_sections/class_file/고한경.pdf" download>PDF 다운로드</a><br>
+<br><a class="btn" href="https://github.com/CryptoSeminar/CryptoSeminar.github.io/blob/master/_sections/class_file/고한경.pdf" download>PDF 다운로드</a><br>
 <br>
 
 유대훈, 주영진 발표 자료
-<br><a class="btn" style="color:red href="https://github.com/CryptoSeminar/CryptoSeminar.github.io/blob/master/_sections/class_file/유대훈,주영진.pdf" download>PDF 다운로드</a><br>
+<br><a class="btn"  href="https://github.com/CryptoSeminar/CryptoSeminar.github.io/blob/master/_sections/class_file/유대훈,주영진.pdf" download>PDF 다운로드</a><br>
 <br>
 
 
