--- a/_sections/인턴.html
+++ b/_sections/인턴.html
@@ -19,3 +19,7 @@ order: 2
 문의 메일: ksp0352@gmail.com<br>
 <br><br>
 감사합니다.
+
+<br><a class="btn" href="https://github.com/CryptoSeminar/CryptoSeminar.github.io/blob/master/_sections/crypto_file/한규형.pdf" download>지원서 양식 다운로드</a><br>
+ 
+<body>
