--- a/_sections/인턴.html
+++ b/_sections/인턴.html
@@ -14,13 +14,15 @@ order: 2
 <br><br>
 관심이 있는 학생들의 많은 참여를 부탁드리며, 궁금하신 사항이 있으시면 아래의 메일로 연락주십시오.
 <br><br>
- 지원 기간: ~2019.12.9 (월)<br>
-면접 일시: 2019.12.10 (화)<br>
+ 지원 기간: 현재는 지원을 받지 않습니다. <br>
+면접 일시: 현재는 지원을 받지 않습니다. <br>
 문의 메일: ksp0352@gmail.com<br>
 <br><br>
 감사합니다.
 
 <br>
+<!--
 <br><a class="btn" href="https://github.com/CryptoSeminar/CryptoSeminar.github.io/blob/master/_sections/%E1%84%8C%E1%85%B5%E1%84%8B%E1%85%AF%E1%86%AB%E1%84%8B%E1%85%A3%E1%86%BC%E1%84%89%E1%85%B5%E1%86%A8.docx" download>지원서 양식 다운로드</a><br>
+-->
  
 <body>
