--- a/_sections/암호및정보보호론.html
+++ b/_sections/암호및정보보호론.html
@@ -19,5 +19,13 @@ order: 5
 <br><a class="btn"  href="https://github.com/CryptoSeminar/CryptoSeminar.github.io/blob/master/_sections/class_file/유대훈,주영진.pdf" download>PDF 다운로드</a><br>
 <br>
 
+권다운, 박도원 발표 자료
+<br><a class="btn"  href="https://github.com/CryptoSeminar/CryptoSeminar.github.io/blob/master/_sections/class_file/%E1%84%80%E1%85%AF%E1%86%AB%E1%84%83%E1%85%A1%E1%84%8B%E1%85%AE%E1%86%AB%2C%E1%84%87%E1%85%A1%E1%86%A8%E1%84%83%E1%85%A9%E1%84%8B%E1%85%AF%E1%86%AB.pptx" download>PDF 다운로드</a><br>
+<br>
+
+이승환 발표 자료
+<br><a class="btn"  href="https://github.com/CryptoSeminar/CryptoSeminar.github.io/blob/master/_sections/class_file/%E1%84%8B%E1%85%B5%E1%84%89%E1%85%B3%E1%86%BC%E1%84%92%E1%85%AA%E1%86%AB.pdf" download>PDF 다운로드</a><br>
+<br>
+
 
 </body>
